New commits merged

--- a/public/index.html
+++ b/public/index.html
@@ -64,13 +64,13 @@
   <script type="text/javascript" src="%PUBLIC_URL%/scripts/libs/sha256.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/scripts/libs/bn.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/scripts/libs/secp256k1.js"></script>
-  <script type="text/javascript" src="%PUBLIC_URL%/scripts/libs/noble-secp256k1.js"></script>
+  <script type="text/javascript" src="%PUBLIC_URL%/scripts/libs/noble-secp256k1.js"></script> -->
 
-  <script type="text/javascript" src="%PUBLIC_URL%/scripts/settings.js"></script>
+  <!-- Load frontend-level components -->
+  <!-- <script type="text/javascript" src="%PUBLIC_URL%/scripts/settings.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/scripts/misc.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/scripts/wallet.js"></script>
-  <script type="text/javascript" src="%PUBLIC_URL%/scripts/network.js"></script>
-  <script type="text/javascript" src="%PUBLIC_URL%/scripts/bitTrx.js"></script> -->
+  <script type="text/javascript" src="%PUBLIC_URL%/scripts/network.js"></script> -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
